Update Firebase configuration in index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -24,13 +22,13 @@
   <script>
     // ========== Firebase 設定 ==========
     const firebaseConfig = {
-      apiKey: "AIzaSyDexample123",
-      authDomain: "emoji-party-game.firebaseapp.com",
-      databaseURL: "https://emoji-party-game-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "emoji-party-game",
-      storageBucket: "emoji-party-game.appspot.com",
-      messagingSenderId: "123456789",
-      appId: "1:123456789:web:abc123"
+      apiKey: "AIzaSyAACLIiJcgtzUjJOGwMbvIXvlAY-rAS2Mw",
+      authDomain: "project-3076283348011523398.firebaseapp.com",
+      databaseURL: "https://project-3076283348011523398-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "project-3076283348011523398",
+      storageBucket: "project-3076283348011523398.firebasestorage.app",
+      messagingSenderId: "108187479133",
+      appId: "1:108187479133:web:f9a75c4b02da8a9c1bf1b4"
     };
 
     let db = null;
@@ -768,4 +766,3 @@
   </script>
 </body>
 </html>
-
